[project]
name = "superset"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "", email = ""},
]
dependencies = ["apache-superset>=5.0.0", "flask-cors>=6.0.2",  "marshmallow<4.0,>=3.20", "psycopg2-binary>=2.9.11", "authlib>=1.6.6", "python-graphql-client>=0.4.3"]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
